tests/machine/x/go/group_by_multi_join_sort.error
Error on line 0: run error: exit status 1
panic: interface conversion: interface {} is int, not float64

goroutine 1 [running]:
main._cast[...](...)
	/workspace/mochi/tests/machine/x/go/group_by_multi_join_sort.go:175
main.main.func1.1(...)
	/workspace/mochi/tests/machine/x/go/group_by_multi_join_sort.go:119
main.main.func1({0xc00024bf10, 0x1, 0xc000048708?}, {0xc00024bf00, 0x2, 0x200000003?}, {0xc00024bef0, 0x2, 0x6d1fb1?}, {0xc00024bf18, ...}, ...)
	/workspace/mochi/tests/machine/x/go/group_by_multi_join_sort.go:122 +0x1065
main.main()
	/workspace/mochi/tests/machine/x/go/group_by_multi_join_sort.go:170 +0x7e5
exit status 2

1: //go:build ignore
